--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Tom `tomatao` HT <tomht@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -23,7 +24,9 @@
     "jsonwebtoken": "^8.5.0",
     "knex": "^0.95.2",
     "morgan": "^1.9.1",
-    "pg": "^7.8.2"
+    "pg": "^7.8.2",
+    "winston": "^3.3.3",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
